# HotelScraper

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json
.github/: release-changelog-config.json
.github/workflows/: release-and-publish.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: hotels.py  prices.py
backend/app/services/: booking_api.py  price_fetcher.py  scheduler.py
backend/static/: index.html
backend/static/assets/: index-BD12zH6a.css  index-Bx9x30yS.css  index-CpD2pabS.js  index-DXFRuvgI.css  index-DYJa2x3D.js  index-qWQlOP8Q.js
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CitySelector.tsx  DateRangePicker.tsx  HotelChart.tsx  HotelFilter.tsx  Icons.tsx  StatusBar.tsx
